--- a/mapreduce/anagrams/pom.xml
+++ b/mapreduce/anagrams/pom.xml
@@ -28,32 +28,21 @@
 		</dependency>
 
 	</dependencies>
+
+
 	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<archive>
-							<manifest>
-								<mainClass>com.alg.mapred.anagram.AnagramJob</mainClass>
-							</manifest>
-						</archive>
-						<descriptorRefs>
-							<descriptorRef>jar-with-dependencies</descriptorRef>
-						</descriptorRefs>
+						<source>1.6</source>
+						<target>1.6</target>
 					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id> <!-- this is used for inheritance merges -->
-							<phase>package</phase> <!-- bind to the packaging phase -->
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
+
 </project>
