--- a/mapreduce/reduce-join/pom.xml
+++ b/mapreduce/reduce-join/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.alg.mapred</groupId>
-	<artifactId>wordcount-opt</artifactId>
+	<artifactId>reduce-join</artifactId>
 	<version>0.0.1</version>
 
 
@@ -27,36 +27,18 @@
 			<version>2.0.0-cdh4.1.2</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.apache.hadoop</groupId> <artifactId>hadoop-mapreduce</artifactId> 
-			<version>2.0.0-cdh4.1.2</version> </dependency> -->
-
-		<!-- <dependency> <groupId>org.apache.hbase</groupId> <artifactId>hbase</artifactId> 
-			<version>0.94.9</version> </dependency> -->
 	</dependencies>
+
 	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<archive>
-							<manifest>
-								<mainClass>com.alg.mapred.wordcount.optimized.OptWordCountJob</mainClass>
-							</manifest>
-						</archive>
-						<descriptorRefs>
-							<descriptorRef>jar-with-dependencies</descriptorRef>
-						</descriptorRefs>
+						<source>1.6</source>
+						<target>1.6</target>
 					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id> <!-- this is used for inheritance merges -->
-							<phase>package</phase> <!-- bind to the packaging phase -->
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
