--- a/mapreduce/sorter/pom.xml
+++ b/mapreduce/sorter/pom.xml
@@ -2,9 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.alg.mapred</groupId>
-	<artifactId>wordcount</artifactId>
-	<version>0.0.1</version>
-
+	<artifactId>sorter</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<repositories>
 		<repository>
